fix: changed to the mutable list